# Query-Raiser

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflows/: master_queryraiservitc.yml
queryraiser/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
queryraiser/static/: styles.css
queryraiser/templates/: base.html
services/: admin.py  aiding_functions.py  choices.py  filters.py  forms.py  models.py  tasks.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_alter_profile_role.py  0002_alter_profile_slug.py  0002_alter_query_department.py  0003_alter_profile_department.py  0003_alter_profile_department_alter_profile_role_and_more.py  0003_profile_role_alter_query_department.py  0004_alter_profile_department_alter_query_department.py  0004_rename_query_raisedquery.py  0005_alter_profile_department_alter_query_department.py  0005_rename_raisedquery_query.py  0006_profile_department.py
services/templates/account/: profile.html
services/templates/services/: 404.html  ViewQuery.html  create_query.html  home.html  landing_page.html  view_all_queries.html
