[tool.poetry]
name = "queryraiser_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
django-tinymce = "^3.5.0"
django-autoslug = "^1.9.8"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.0.0"}
django-crispy-forms = "^1.14.0"
social-auth-app-django = "^5.0.0"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
