[tool.poetry]
name = "queryraiser_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
django-tinymce = "3.3.0"
django-autoslug = "^1.9.8"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.0.0"}
django-crispy-forms = "^1.14.0"
social-auth-app-django = "^5.0.0"
django-environ = "^0.9.0"
django-filter = "^22.1"
celery = "^5.2.7"
django-celery-results = "^2.4.0"
redis = "^4.3.4"
django-storages = {extras = ["azure"], version = "^1.13.1"}
django-cloudinary-storage = "^0.3.0"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
hypercorn = "^0.14.3"
gunicorn = "^20.1.0"
django-import-export = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
